doc/logfile.txt
Class documentation
<---- javadoc command: ---->
E:\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
E:\Greenfoot\lib\extensions\greenfoot.jar;E:\Greenfoot\lib\bluejcore.jar;E:\Greenfoot\lib\bluejeditor.jar;E:\Greenfoot\lib\bluejext.jar;E:\Greenfoot\lib\AppleJavaExtensions.jar;E:\Greenfoot\lib\junit-4.11.jar;E:\Greenfoot\lib\hamcrest-core-1.3.jar;E:\Greenfoot\lib\bluej.jar;E:\Greenfoot\lib\diffutils-1.2.1.jar;E:\Greenfoot\lib\commons-httpclient-3.1.jar;E:\Greenfoot\lib\commons-logging-api-1.1.2.jar;E:\Greenfoot\lib\commons-codec-1.3.jar;E:\Greenfoot\lib\jl1.0.1.jar;E:\Greenfoot\lib\opencsv-2.3.jar;E:\Greenfoot\lib\xom-1.2.9.jar;E:\Greenfoot\lib\guava-17.0.jar;E:\Greenfoot\lib\javassist-3.18.0.jar;E:\Greenfoot\lib\commons-vfs2-2.0.jar;E:\Greenfoot\lib\httpclient-4.1.1.jar;E:\Greenfoot\lib\httpcore-4.1.jar;E:\Greenfoot\lib\httpmime-4.1.1.jar;E:\Game\Game
-d
E:\Game\Game\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
E:\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
E:\Game\Game\QuitButton.java
<---- end of javadoc command ---->
Loading source file E:\Game\Game\QuitButton.java...
E:\Game\Game\QuitButton.java:18: error: illegal start of statement
    }    
    ^
1 error
